Fixat
Tables when searching for a user is fixed. removed weird gap

--- a/tddd27-project/src/components/common/otherProfile/OtherProfile.css
+++ b/tddd27-project/src/components/common/otherProfile/OtherProfile.css
@@ -58,9 +58,8 @@
 
 .educations_container {
     max-width: 900px;
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 16px;
+    display: flex;
+    flex-direction: row;
     background-image: url(/src/assets/images/paper.jpg);
     background-size: cover;
     background-position: center;
@@ -68,16 +67,12 @@
         0 4px 8px rgba(0, 0, 0, 0.2),
         0 6px 20px rgba(0, 0, 0, 0.19);
     padding: 24px 32px;
-    margin: 24px auto 0;
+    margin: 24px 0;
     border-radius: 12px;
-    grid-auto-flow: column;
 }
 
 .education_card {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
     gap: 12px 24px;
-
     padding: 16px;
     border: 1px solid rgba(0, 0, 0, 0.25);
     border-radius: 8px;
@@ -93,6 +88,11 @@
     margin: 0 0 6px;
     font-size: 1.25rem;
     padding: 10pt;
+}
+
+.multiple_programs {
+    display: flex;
+    flex-direction: row;
 }
 
 .visited_profile {
